# twitter-clone-api

./: .dockerignore  .env.example  .flake8  API_ENDPOINTS.md  Dockerfile  Makefile  README.md  README_DOCKER.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: build.yml  code-review.yml
authentication/: urls.py
authentication/serializers/: __init__.py  login_serializer.py  register_serializer.py
authentication/tests/: test_views.py
authentication/views/: __init__.py  login_view.py  logout_view.py  register_view.py
config/: settings.py  urls.py
posts/: admin.py  urls.py
posts/migrations/: 0001_initial.py  0002_initial.py
posts/models/: __init__.py  comment.py  like.py  post.py
posts/permissions/: __init__.py  is_author_or_read_only.py
posts/serializers/: __init__.py  comment_serializer.py  like_serializer.py  post_serializer.py
posts/tests/: __init__.py  test_models.py  test_serializers.py  test_views.py
posts/views/: __init__.py  comment_viewset.py  like_viewset.py  post_viewset.py
users/: admin.py  urls.py
users/migrations/: 0001_initial.py
users/models/: __init__.py  follow.py  user.py
users/permissions/: __init__.py  is_owner_or_read_only.py
users/serializers/: __init__.py  follow_serializer.py  user_serializer.py
users/tests/: __init__.py  test_models.py  test_serializers.py  test_views.py
users/views/: __init__.py  follow_viewset.py  user_viewset.py
